// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redo shouldn\`t change anything if there is no future states 1`] = `
Object {
  "currentState": Object {
    "discount": 1,
    "items": Array [
      Object {
        "count": 2,
        "discount": 1,
        "id": "i1",
        "price": 100,
      },
    ],
  },
  "futureStates": Array [],
  "previousStates": Array [
    Object {
      "discount": 1,
      "items": Array [],
    },
    Object {
      "discount": 1,
      "items": Array [],
    },
    Object {
      "discount": 1,
      "items": Array [
        Object {
          "count": 1,
          "discount": 1,
          "id": "i1",
          "price": 100,
        },
      ],
    },
  ],
}
`;

exports[`should redo the last changes 1`] = `
Object {
  "currentState": Object {
    "discount": 1,
    "items": Array [
      Object {
        "count": 3,
        "discount": 1,
        "id": "i1",
        "price": 100,
      },
    ],
  },
  "futureStates": Array [],
  "previousStates": Array [
    Object {
      "discount": 1,
      "items": Array [],
    },
    Object {
      "discount": 1,
      "items": Array [],
    },
    Object {
      "discount": 1,
      "items": Array [
        Object {
          "count": 1,
          "discount": 1,
          "id": "i1",
          "price": 100,
        },
      ],
    },
    Object {
      "discount": 1,
      "items": Array [
        Object {
          "count": 2,
          "discount": 1,
          "id": "i1",
          "price": 100,
        },
      ],
    },
  ],
}
`;

exports[`should undo the last changes 1`] = `
Object {
  "currentState": Object {
    "discount": 1,
    "items": Array [
      Object {
        "count": 2,
        "discount": 1,
        "id": "i1",
        "price": 100,
      },
    ],
  },
  "futureStates": Array [
    Object {
      "discount": 1,
      "items": Array [
        Object {
          "count": 3,
          "discount": 1,
          "id": "i1",
          "price": 100,
        },
      ],
    },
  ],
  "previousStates": Array [
    Object {
      "discount": 1,
      "items": Array [],
    },
    Object {
      "discount": 1,
      "items": Array [],
    },
    Object {
      "discount": 1,
      "items": Array [
        Object {
          "count": 1,
          "discount": 1,
          "id": "i1",
          "price": 100,
        },
      ],
    },
  ],
}
`;

exports[`undo shouldn\`t change anything if there is no previous states 1`] = `
Object {
  "currentState": Object {
    "discount": 1,
    "items": Array [],
  },
  "futureStates": Array [
    Object {
      "discount": 1,
      "items": Array [
        Object {
          "count": 2,
          "discount": 1,
          "id": "i1",
          "price": 100,
        },
      ],
    },
    Object {
      "discount": 1,
      "items": Array [
        Object {
          "count": 1,
          "discount": 1,
          "id": "i1",
          "price": 100,
        },
      ],
    },
    Object {
      "discount": 1,
      "items": Array [],
    },
  ],
  "previousStates": Array [],
}
`;
